# http-rp

./: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
html/: index.html
src/: main.rs
src/http/: css.rs  html.rs  js.rs
src/usb/: mod.rs  reset.rs
static/js/: led.js
